# Invest-Helper

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.zh-CN.md  RUNBOOK_LOCAL.example.txt  SECURITY.md  docker-compose.yml  package.json  repo_tree.txt
apps/api/: .env.example  README.md  alembic.ini  db.py  enums.py  main.py  models.py  pyproject.toml  schemas.py  settings.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1f3e2d4c5b6a_add_raw_posts_kol_id.py  2b7f8d9c1a2e_add_weekly_digests.py  3c1a9e5d7b2f_change_parsed_model_output_to_json.py  5a2e3c1b9d4f_add_extraction_review_fields.py  6e4f8a9b2c1d_add_raw_post_review_status.py  708527c13f5f_merge_heads_6e4f8a9b2c1d_and_.py  7c91b6e5a211_add_extractor_name_and_last_error.py  8d9f20b4e4be_add_kols_and_kol_views.py  (+12 more)
apps/api/scripts/: x_import_converter.py
apps/api/services/: digests.py  extraction.py  portfolio_advice.py  profiles.py  view_logic.py  weekly_digests.py
apps/api/tests/: conftest.py  test_admin_backfill_auto_review.py  test_admin_cleanup_extraction_json.py  test_admin_fix_approved_missing_views.py  test_admin_hard_delete.py  test_admin_recompute_extraction_statuses.py  test_admin_reextract_pending_bulk.py  test_admin_refresh_wrong_extracted_json.py  test_daily_digests.py  test_dashboard_and_ingest.py  test_extract_jobs.py  test_extraction_runtime_limits_and_rules.py  test_extraction_scaffold.py  test_extractions_review_flow.py  test_extractions_search.py  test_extractor_openai_and_fallback.py  test_kol_views.py  test_portfolio_advice.py  test_x_import_converter.py
(+47 files in other folders)
